--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
 
     <!-- Camera Rig -->
     <a-entity id="cameraRig" position="0 1.6 10">
-      <a-camera wasd-controls="enabled: false"></a-camera>
+      <a-camera id="camera" wasd-controls="enabled: false"></a-camera>
 
       <!-- Left Controller -->
       <a-entity
         id="leftController"
         oculus-touch-controls="hand: left"
-        laser-controls="hand: left"
         raycaster="objects: .hoverable"
         line="color: cyan; opacity: 0.75"
         position="-0.2 0 -0.5">
@@ -47,7 +46,6 @@
       <a-entity
         id="rightController"
         oculus-touch-controls="hand: right"
-        laser-controls="hand: right"
         raycaster="objects: .hoverable"
         line="color: yellow; opacity: 0.75"
         position="0.2 0 -0.5">
