--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
   <title>3D Scatterplot in VR</title>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/aframe-physics-system@4.0.0/dist/aframe-physics-system.min.js"></script>
+  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+  <script src="https://gftruj.github.io/webzamples/aframe/controls/oculus-thumbstick-controls.js"></script>
 </head>
 <body>
   <a-scene physics vr-mode-ui="enabled: true" webxr="referenceSpaceType: local">
@@ -29,26 +28,21 @@
     <!-- Data Points -->
     <a-entity id="scatterplot" position="0 0 0"></a-entity>
 
-    <!-- Camera Rig -->
-    <a-entity id="cameraRig" position="0 1.6 10">
+    <!-- Camera and Controllers Rig -->
+    <a-entity id="rig" position="0 1.6 10">
       <a-camera id="camera"></a-camera>
 
       <!-- Left Controller -->
       <a-entity
         id="leftController"
-        oculus-touch-controls="hand: left"
-        raycaster="objects: .hoverable"
-        line="color: cyan; opacity: 0.75"
-        position="-0.2 0 -0.5">
+        oculus-touch-controls="hand: left">
       </a-entity>
 
       <!-- Right Controller -->
       <a-entity
         id="rightController"
         oculus-touch-controls="hand: right"
-        raycaster="objects: .hoverable"
-        line="color: yellow; opacity: 0.75"
-        position="0.2 0 -0.5">
+        oculus-thumbstick-controls>
       </a-entity>
     </a-entity>
   </a-scene>
@@ -127,37 +121,6 @@ Blocks per Game: ${blocksPG}`
       if (ptpg <= 1.0) return 'yellow';
       return 'green';
     }
-
-    // Custom joystick handling
-    document.addEventListener('gamepadconnected', () => {
-      const cameraRig = document.getElementById('cameraRig').object3D;
-
-      const updateControls = () => {
-        const gamepads = navigator.getGamepads();
-        const gp = gamepads[0]; // Assuming the first gamepad is the one in use
-
-        if (gp) {
-          // Left joystick: Movement
-          const moveX = gp.axes[0] * 0.2;
-          const moveZ = gp.axes[1] * 0.2;
-          cameraRig.position.x += moveX;
-          cameraRig.position.z -= moveZ;
-
-          // Right joystick: Rotation
-          const rotateY = gp.axes[2] * 0.05;
-          const rotateX = gp.axes[3] * 0.05;
-          cameraRig.rotation.y += rotateY;
-          cameraRig.rotation.x = Math.max(
-            Math.min(cameraRig.rotation.x + rotateX, Math.PI / 2),
-            -Math.PI / 2
-          );
-        }
-
-        requestAnimationFrame(updateControls);
-      };
-
-      updateControls();
-    });
   </script>
 </body>
 </html>
