--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <title>3D Scatterplot in VR</title>
   <meta charset="utf-8">
+  <!-- A-Frame Library -->
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-  <!-- Include any additional A-Frame components if necessary -->
+  <!-- Oculus Thumbstick Controls (Assumed to be working) -->
+  <script src="https://gftruj.github.io/webzamples/aframe/controls/oculus-thumbstick-controls.js"></script>
 </head>
 <body>
   <a-scene physics vr-mode-ui="enabled: true" webxr="referenceSpaceType: local">
@@ -31,6 +33,7 @@
 
     <!-- Camera and Controllers Rig -->
     <a-entity id="rig" position="0 1.6 10" camera-controls>
+      <!-- Camera -->
       <a-camera id="camera" wasd-controls-enabled="false"></a-camera>
 
       <!-- Left Controller with Laser Pointer -->
@@ -49,58 +52,81 @@
     </a-entity>
   </a-scene>
 
-  <!-- Custom Components -->
+  <!-- Custom Components and Logic -->
   <script>
-    // Camera Controls Component
+    /**
+     * Component: camera-controls
+     * Handles camera movement and rotation based on Quest 3 joystick inputs.
+     */
     AFRAME.registerComponent('camera-controls', {
       schema: {
-        speed: {type: 'number', default: 0.1},
-        rotationSpeed: {type: 'number', default: 0.02}
+        speed: {type: 'number', default: 0.1},          // Movement speed
+        rotationSpeed: {type: 'number', default: 0.02} // Rotation speed
       },
       init: function () {
-        this.cameraRig = this.el; // Assuming this component is attached to the rig
+        console.log('camera-controls component initialized');
+        this.cameraRig = this.el; // Reference to the rig entity
         this.controllerLeft = null;
         this.controllerRight = null;
       },
       tick: function (time, deltaTime) {
-        // Find controllers if not already found
+        // Initialize controllers if not already done
         if (!this.controllerLeft || !this.controllerRight) {
           const leftControllerEl = document.querySelector('#leftController');
           const rightControllerEl = document.querySelector('#rightController');
+
           if (leftControllerEl && leftControllerEl.components['oculus-touch-controls']) {
             this.controllerLeft = leftControllerEl.components['oculus-touch-controls'].controller;
           }
+
           if (rightControllerEl && rightControllerEl.components['oculus-touch-controls']) {
             this.controllerRight = rightControllerEl.components['oculus-touch-controls'].controller;
           }
+
           if (!this.controllerLeft || !this.controllerRight) return;
         }
 
-        // Left Joystick for Movement
+        // Handle Left Joystick for Movement
         const leftAxes = this.controllerLeft.axes;
         if (leftAxes && leftAxes.length >= 2) {
           const moveX = leftAxes[0];
           const moveZ = leftAxes[1];
+
+          // Debugging: Log joystick values
+          // console.log('Left Joystick - X:', moveX, 'Z:', moveZ);
+
+          // Create movement vector
           const movement = new THREE.Vector3(moveX, 0, moveZ);
-          movement.applyQuaternion(this.cameraRig.object3D.quaternion);
-          movement.multiplyScalar(this.data.speed * (deltaTime / 16)); // Normalize speed
+          movement.applyQuaternion(this.cameraRig.object3D.quaternion); // Align with camera orientation
+          movement.multiplyScalar(this.data.speed * (deltaTime / 1000)); // Scale by speed and deltaTime
+
+          // Update rig position
           this.cameraRig.object3D.position.add(movement);
         }
 
-        // Right Joystick for Rotation
+        // Handle Right Joystick for Rotation
         const rightAxes = this.controllerRight.axes;
         if (rightAxes && rightAxes.length >= 2) {
           const rotateY = rightAxes[0];
           const rotateX = rightAxes[1];
+
+          // Debugging: Log joystick values
+          // console.log('Right Joystick - Yaw:', rotateY, 'Pitch:', rotateX);
+
+          // Apply rotation
           this.cameraRig.object3D.rotation.y -= rotateY * this.data.rotationSpeed;
           this.cameraRig.object3D.rotation.x -= rotateX * this.data.rotationSpeed;
-          // Clamp the pitch to prevent flipping
+
+          // Clamp pitch to prevent flipping
           this.cameraRig.object3D.rotation.x = Math.max(-Math.PI / 2, Math.min(Math.PI / 2, this.cameraRig.object3D.rotation.x));
         }
       }
     });
 
-    // Laser Controls Component
+    /**
+     * Component: laser-controls
+     * Adds a laser pointer (raycaster) to the controller for interacting with objects.
+     */
     AFRAME.registerComponent('laser-controls', {
       schema: {
         hand: {type: 'string', default: 'right'}
@@ -109,23 +135,23 @@
         const data = this.data;
         const el = this.el;
 
-        // Create a raycaster
-        const raycaster = document.createElement('a-entity');
-        raycaster.setAttribute('raycaster', {
-          objects: '.hoverable',
-          showLine: false
+        // Create a raycaster entity
+        const raycasterEl = document.createElement('a-entity');
+        raycasterEl.setAttribute('raycaster', {
+          objects: '.hoverable',    // Objects to interact with
+          far: 10,                   // Maximum distance
+          showLine: true             // Display the laser line
         });
-        raycaster.setAttribute('line', {
+        raycasterEl.setAttribute('line', {
           color: '#FFFFFF',
           opacity: 0.75,
           start: '0 0 0',
           end: '0 0 -1'
         });
-        raycaster.setAttribute('visible', true);
-        el.appendChild(raycaster);
+        el.appendChild(raycasterEl);
 
-        // Listen for intersection events
-        raycaster.addEventListener('raycaster-intersected', function (evt) {
+        // Listen for intersection events to show/hide tooltips
+        raycasterEl.addEventListener('raycaster-intersected', function (evt) {
           const intersectedEl = evt.detail.el;
           const tooltip = intersectedEl.querySelector('a-text');
           if (tooltip) {
@@ -133,7 +159,7 @@
           }
         });
 
-        raycaster.addEventListener('raycaster-intersected-cleared', function (evt) {
+        raycasterEl.addEventListener('raycaster-intersected-cleared', function (evt) {
           const intersectedEl = evt.detail.el;
           const tooltip = intersectedEl.querySelector('a-text');
           if (tooltip) {
@@ -143,7 +169,20 @@
       }
     });
 
-    // Load scatterplot data
+    /**
+     * Function: getColorFromMetric
+     * Determines the color of a data point based on the PtPG metric.
+     */
+    function getColorFromMetric(ptpg) {
+      if (ptpg < 0.75) return 'blue';
+      if (ptpg <= 1.0) return 'yellow';
+      return 'green';
+    }
+
+    /**
+     * Load Scatterplot Data
+     * Fetches data from 'scatter_data.json' and creates data points with tooltips.
+     */
     fetch('scatter_data.json')
       .then(response => response.json())
       .then(data => {
@@ -169,17 +208,18 @@
           const scaledY = y * 5;
           const scaledZ = z / 10;
 
+          // Create a sphere for the data point
           const sphere = document.createElement('a-sphere');
           sphere.setAttribute('position', `${scaledX} ${scaledY} ${scaledZ}`);
           sphere.setAttribute('radius', 0.2);
           sphere.setAttribute('color', getColorFromMetric(y));
-          sphere.setAttribute('class', 'hoverable');
+          sphere.setAttribute('class', 'hoverable'); // For interaction
           scatterplot.appendChild(sphere);
 
+          // Create a tooltip as a child of the sphere
           const tooltip = document.createElement('a-text');
-          tooltip.setAttribute(
-            'value',
-            `Player: ${name}
+          tooltip.setAttribute('value',
+`Player: ${name}
 Completeness Rating: ${x.toFixed(1)}
 Weighted Rating: ${z.toFixed(1)}
 Points per Game (PtPG): ${y.toFixed(2)}
@@ -190,23 +230,16 @@ Points: ${points}
 Powerplay Points: ${ppp}
 Shots per Game: ${shotsPG}
 Hits per Game: ${hitsPG}
-Blocks per Game: ${blocksPG}`
-          );
+Blocks per Game: ${blocksPG}`);
           tooltip.setAttribute('position', `0.5 0 0.5`);
           tooltip.setAttribute('align', 'center');
           tooltip.setAttribute('scale', '0.5 0.5 0.5');
           tooltip.setAttribute('color', 'yellow');
-          tooltip.setAttribute('visible', false);
+          tooltip.setAttribute('visible', false); // Initially hidden
           sphere.appendChild(tooltip);
         });
       })
       .catch(error => console.error('Error loading scatterplot data:', error));
-
-    function getColorFromMetric(ptpg) {
-      if (ptpg < 0.75) return 'blue';
-      if (ptpg <= 1.0) return 'yellow';
-      return 'green';
-    }
   </script>
 </body>
 </html>
